Spring 5.1、Spring Boot 2.1、JDK 11にアップグレード (#18)
＼( 'ω')／ウオオオオオアアアーーーーッ！！！